Basic frontend schedule added.

--- a/Episode_3/com_eventschedule/administrator/components/com_eventschedule/language/en-GB/com_eventschedule.ini
+++ b/Episode_3/com_eventschedule/administrator/components/com_eventschedule/language/en-GB/com_eventschedule.ini
@@ -92,8 +92,16 @@ COM_EVENTSCHEDULE_N_ITEMS_UNFEATURED="%d items unfeatured."
 COM_EVENTSCHEDULE_N_ITEMS_UNFEATURED_1="%d item unfeatured."
 COM_EVENTSCHEDULE_N_ITEMS_UNPUBLISHED="%d items unpublished."
 COM_EVENTSCHEDULE_N_ITEMS_UNPUBLISHED_1="%d item unpublished."
-COM_EVENTSCHEDULE_PROJECT_FIELD_CONFIG_COMMON_DESC="Add custom fields to project"
-COM_EVENTSCHEDULE_PROJECT_FIELD_CONFIG_COMMON_DISPLAY="Use custom fields"
+COM_EVENTSCHEDULE_CONFIG_COMMON_DESC="Add options to component, that are also used in other components."
+COM_EVENTSCHEDULE_CONFIG_COMMON_DISPLAY="Common options"
+COM_EVENTSCHEDULE_CONFIG_GENERAL_DESC="Set general variables for event schedule display"
+COM_EVENTSCHEDULE_CONFIG_GENERAL_DISPLAY="General display options"
+COM_EVENTSCHEDULE_CONFIG_FIELD_SCHEDULE_START_DISPLAY="Schedule start"
+COM_EVENTSCHEDULE_CONFIG_FIELD_SCHEDULE_START_DESC="Time the schedule starts (default: 08:00 AM)"
+COM_EVENTSCHEDULE_CONFIG_FIELD_SCHEDULE_END_DISPLAY="Schedule end"
+COM_EVENTSCHEDULE_CONFIG_FIELD_HEIGHT_PER_MINUTE_DESC="Time the schedule starts (default: 08:00 AM)"
+COM_EVENTSCHEDULE_CONFIG_FIELD_HEIGHT_PER_MINUTE_DISPLAY="Height pixels per minute"
+COM_EVENTSCHEDULE_CONFIG_FIELD_SCHEDULE_END_DESC="The time is vertical on the schedule. How many pixels will a minute take (minimum 1, maximum 50, default 2)"
 COM_EVENTSCHEDULE_SCHEDULEMAKER_TABLE_CAPTION="Schedulemaker"
 COM_EVENTSCHEDULE_SECTIONS_TABLE_CAPTION="Sections"
 COM_EVENTSCHEDULE_SECTION_FIELD_CONTAINERS_DESC="Input containers here."
@@ -114,8 +122,11 @@ COM_EVENTSCHEDULE_TABLE_EVENT_TABLEHEAD_NAME="Event name"
 COM_EVENTSCHEDULE_TABLE_EVENT_TABLEHEAD_EVENT_TYPE="Event type"
 COM_EVENTSCHEDULE_TABLE_EVENT_TYPE_TABLEHEAD_NAME="Event type name"
 COM_EVENTSCHEDULE_TABLE_LOCATOR_TABLEHEAD_CONTAINER="Container"
-COM_EVENTSCHEDULE_TABLE_LOCATOR_TABLEHEAD_ENDTIME="Endtime"
+COM_EVENTSCHEDULE_TABLE_LOCATOR_TABLEHEAD_ENDTIME="End time"
 COM_EVENTSCHEDULE_TABLE_LOCATOR_TABLEHEAD_SECTION="Section"
-COM_EVENTSCHEDULE_TABLE_LOCATOR_TABLEHEAD_STARTTIME="Starttime"
+COM_EVENTSCHEDULE_TABLE_LOCATOR_TABLEHEAD_STARTTIME="Start time"
 COM_EVENTSCHEDULE_TABLE_SECTION_TABLEHEAD_CONTAINERS="In containers"
-COM_EVENTSCHEDULE_TABLE_SECTION_TABLEHEAD_NAME="Section nameame"
+COM_EVENTSCHEDULE_TABLE_SECTION_TABLEHEAD_NAME="Section name"
+COM_EVENTSCHEDULE_MENU_SCHEDULE_TITLE="Schedule"
+COM_EVENTSCHEDULE_MENU_SCHEDULE_OPTION="No option yet"
+COM_EVENTSCHEDULE_MENU_SCHEDULE_DESC="The schedule of the events."
