--- a/Episode_3/com_eventschedule/administrator/components/com_eventschedule/language/en-GB/com_eventschedule.sys.ini
+++ b/Episode_3/com_eventschedule/administrator/components/com_eventschedule/language/en-GB/com_eventschedule.sys.ini
@@ -6,3 +6,6 @@ COM_EVENTSCHEDULE_SUBMENUNAME_CONTAINERS="Containers"
 COM_EVENTSCHEDULE_SUBMENUNAME_EVENTS="Events"
 COM_EVENTSCHEDULE_SUBMENUNAME_EVENT_TYPES="Event types"
 COM_EVENTSCHEDULE_SUBMENUNAME_SECTIONS="Sections"
+COM_EVENTSCHEDULE_MENU_SCHEDULE_TITLE="Schedule"
+COM_EVENTSCHEDULE_MENU_SCHEDULE_OPTION="No option yet"
+COM_EVENTSCHEDULE_MENU_SCHEDULE_DESC="The schedule of the events."
